src/main/resources/org/tin/oop2_capstone/styles/application.css
@import "lightmode.css";
@import "palettes.css";
@import "fonts.css";

/* PLEASE USE COLORS FROM PALETTES.CSS, OR ADD COLORS THERE */

.label{
    -fx-font-family: "Inter 18pt";
}

#anchorPaneSideBar{
    -fx-background-color: -bg-nav;

}

.ctaButton{
    -fx-background-color: -orange-to-red-orange;
    -fx-text-fill: white;
    -fx-background-radius: 50;
    -fx-font-size: 16;
    -fx-font-family: "Inter 18pt SemiBold";
}

.plusAppName{
    -fx-text-fill: -bg-default3;
    -fx-font-size: 50;
    -fx-font-family: "Inter 18pt SemiBold";
}

.appName, .inAppName{
    -fx-font-size: 40;
    -fx-font-family: "Inter 18pt SemiBold";
}

.appName{
    -fx-text-fill: -orange-to-red-orange;
}

.button{
    -fx-background-radius: 50;
    -fx-background-color: -accent-color;
    -fx-text-fill: white;
    -fx-font-size: 16;
}

.button:hover{
    -fx-effect: dropshadow(three-pass-box, darkgrey, 14, 0, 0, 3);
    -fx-scale-x: 1.005;
    -fx-scale-y: 1.05;
}


#anchorPaneContent{
    -fx-background-color: -bg-content;
}

.scroll-pane{
    -fx-background-color: -bg-content;
}

.split-pane{
    -fx-background: -bg-content;
}

.split-pane-divider{
    -fx-pref-width: 0.5px;
    -fx-padding: 0 2;
    -fx-effect: dropshadow(three-pass-box, lightgrey, 20, 0.7, 4, 0);
}

.currentSVG{
    -fx-stroke: -accent-color;
}


.lightText{
    -fx-text-fill: grey;
}

.boldText{
    -fx-font-weight: bold;
}

.grid{
    -fx-background-color: transparent;
    -fx-background: transparent;
}

.card{
    -fx-background-color: -bg-default;
    -fx-background-radius: 15;
    -fx-effect: dropshadow(three-pass-box, darkgrey, 10, 0, 0, 2);
}

.cardContent{
    -fx-background-color: -bg-default;
    -fx-background-radius: 15;
    -fx-effect: dropshadow(three-pass-box, lightgrey, 20, 0, 0, 5);
}

.navButton{
    -fx-font-size: 16;
}

.navButton:hover {
    -fx-background-color: -bg-color-accent;
    -fx-background-radius: 30;
    -fx-font-size: 16;
    -fx-font-weight: 500;
}

.navButton.active {
    -fx-background-color: -bg-color-accent;
    -fx-background-radius: 30;
    -fx-font-size: 16;
}

.navButton.active .icon-nav, .navButton.active .label{
    -fx-text-fill: -accent-color;
    -fx-stroke: -accent-color;
}

.navButton.active .icon-nav-dashboard, .navButton.active .icon-nav-settings{
    -fx-fill: -accent-color;
}

.navButton.active .label,
.navButton:hover .label {
    -fx-font-family: "Inter 18pt SemiBold";
}

#dashboardNav.active .label, #dashboardNav.active .icon-nav-dashboard,
#settingsNav.active .icon-nav-settings, #settingsNav.active .label {
    -fx-text-fill: -brand-text-color;
    -fx-fill: -brand-text-color;
}

.notif-card {
    -fx-background-color: -bg-default;
    -fx-background-radius: 14px;
    -fx-border-radius: 14px;
    -fx-effect: dropshadow(three-pass-box, lightgrey, 10, 0, 0, 2);
}

.notif-card:hover {
    -fx-effect: dropshadow(three-pass-box, lightgrey, 14, 0, 0, 3);
    -fx-scale-x: 1.005;
    -fx-scale-y: 1.05;
}

.popup{
    -fx-background-color:#A9A9A950; /*lightgrey but semi-transparent*/
}

.text-field{
    -fx-padding: 5 10;
}

#repCountLabel{
    -fx-text-fill: -accent-color;
}

.toggle-button {
    -fx-background-color: -bg-color-accent, -bg-default;
    -fx-background-radius: 24px, 24px;
    -fx-background-insets: 0, 2 22 2 2;
    -fx-effect: dropshadow(three-pass-box, lightgrey, 2, 0, 0, 1);
    -fx-cursor: hand;
}

.toggle-button:selected {
    -fx-background-color: -accent-color, -bg-default;
    -fx-background-insets: 0, 2 2 2 22;
}

.choice-box, .text-field{
    -fx-background-color: -bg-default2;
    -fx-border-width: 1;
    -fx-border-radius: 20;
    -fx-background-radius: 20;
    -fx-border-color: -bg-default-border;
    -fx-font-size: 16;
}

.choice-box:hover, .choice-box:focused, .text-field:hover, .text-field:focused{
    -fx-border-color: -orange-to-red-orange;
}

.tabTitle{
    -fx-font-size: 30;
    -fx-text-fill: -bg-default3;
    -fx-font-family: "Inter 18pt SemiBold";
}
.cardTitle1{
    -fx-font-size: 18;
    -fx-text-fill: -bg-default3;
    -fx-font-family: "Inter 18pt SemiBold";
}
.cardTitle2{
    -fx-font-size: 14;
    -fx-text-fill: -bg-default3;
    -fx-font-family: "Inter 18pt SemiBold";
}
.cardDetails{
    -fx-font-size: 11;
    -fx-text-fill: -grey;
    -fx-font-family: "Inter 18pt";
}


.logQuickActions{
    -fx-border-radius: 30;
    -fx-background-radius: 30;
    -fx-text-fill: white;
    -fx-effect: dropshadow(three-pass-box, darkgrey, 10, 0, 0, 2);
    -fx-background-color: -peach-to-orange;

}

.logQuickActions:hover{
    -fx-effect: dropshadow(three-pass-box, darkgrey, 20, 0.2, 0, 2);
    -fx-scale-x: 1.005;
    -fx-scale-y: 1.05;

}

.logQuickActions .label{
    -fx-text-fill: white;
    -fx-font-size: 16;
    -fx-font-family: "Inter 18pt SemiBold";
}

.caloriesDashboard{
    -fx-font-size: 30;
    -fx-font-family: "Inter 18pt SemiBold";
}

#caloriesInLabel, #fatLabel, #sugarLabel, #calInGridPane .label{
    -fx-text-fill: -green;
}

#caloriesOutLabel, #calOutGridPane .label{
    -fx-text-fill: -orange;
}

#caloriesLabel, #cholesterolLabel{
    -fx-text-fill: -vibrant-blue;
}

#netCaloriesLabel, #carbsLabel, #fiberLabel{
    -fx-text-fill: -purple;
}

#activityStreakLabel, #proteinLabel, #sodiumLabel{
    -fx-text-fill: -vibrant-red;
}

/*More profile-specific things*/
.bmiCardContent{
    -fx-background-color: -orange-to-red-orange;
    -fx-background-radius: 15;
    -fx-effect: dropshadow(three-pass-box, lightgrey, 20, 0, 0, 5);
}

.bmiCardContent .label {-fx-text-fill: white;}

.label{
    -fx-fill: -bg-default3;
}

/*Food Log specifics*/
.calorieCountText{
    -fx-text-fill: -green;
    -fx-font-family: "Inter 18pt SemiBold";
}
.calorieBurnCountText{
    -fx-text-fill: -vibrant-red;
    -fx-font-family: "Inter 18pt SemiBold";
}
.minuteCountText{
    -fx-text-fill: -orange;
    -fx-font-family: "Inter 18pt SemiBold";
}

.progress-bar > .track {
    -fx-border-radius: 20;
    -fx-background-radius: 20;
    -fx-border-color: transparent;
    -fx-background-color: -bg-default-border;

}

.progress-bar .bar {
    -fx-background-insets: 0;
    -fx-background-radius: 20;
    -fx-background-color: -pink;
}

#toolTipVbox{
    -fx-background-color: -bg-default;
    -fx-background-radius: 20;
    -fx-border-color: -orange-to-red-orange;
    -fx-border-radius: 20;
    -fx-border-width: 2;
}

.default-color0.chart-pie {
    -fx-pie-color: -somewhatdark-orange;
}
.default-color1.chart-pie {
    -fx-pie-color: -abitdark-orange;
}
.default-color2.chart-pie {
    -fx-pie-color: -notdark-orange;
}

.chart-pie-label-line {
    -fx-stroke: transparent;
}

.chart-content{
    -fx-padding: 0;
}

.pie-chart{
    -fx-padding: 0;
}




/* PLEASE USE COLORS FROM PALETTES.CSS, OR ADD COLORS THERE */

